test/error/enum_defined2.gw
int i;
enum
{
	first
} i;
